Add API to change user's password.
